k8s-yaml/nginx-ingress/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
#    - host: th2.com
     - http:
        paths:
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: s3-service
                port:
                  number: 3090
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 4090
